--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -20,16 +12,22 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Set up JDK 22
       uses: actions/setup-java@v4
       with:
         java-version: '22'
+        distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn clean package
+
     - name: Build Docker image
       run: docker build -t testcicd:latest .
+
     - name: Deploy Docker container
       run: |
         docker stop testcicd || true
